--- a/agrinho-maria/index.html
+++ b/agrinho-maria/index.html
@@ -3,66 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>impactos alimentares</title>
+    <title>Impactos Alimentares</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>impactos alimentares</h1>
-        <img src="cataratas-do-iguacu.jpg" alt="Foto das Cataratas do Iguaçu, um lugar com muitas árvores e mata nativa preservada.">
-        <p>Os impactos alimentares aumento de risco de doenças crônicas, como diabetes, doenças cardiovasculares e certos tipos de câncer.</p>
+        <h1>Impactos Alimentares</h1>
+        <img src="healthy-food.jpg" alt="Variedade de alimentos saudáveis como frutas, legumes e grãos.">
+        <p>Os impactos alimentares** se referem às consequências de nossos hábitos alimentares na saúde individual e no meio ambiente. Uma alimentação desequilibrada pode aumentar o risco de doenças crônicas, como diabetes, doenças cardiovasculares e certos tipos de câncer.</p>
         <nav>
             <ul>
                 <li><a href="#problemas">Os Problemas</a></li>
                 <li><a href="#consequencias">Consequências</a></li>
-                <li><a href="#conclusao">Conclusão</a></li>
+                <li><a href="#solucoes">Soluções</a></li>
             </ul>
         </nav>
     </header>
-
-<!-- código omitido --><!-- código omitido -->
-
+<!-- código omitido -->
+ <!-- código omitido -->
     <main>
         <section id="problemas" class="conteudo">
             <h2>Os Problemas</h2>
             <article>
-                <h3>excesso de refrigerante</h3>
-                <p>O consumo excessivo de refrigerantes, ricos em açúcar, pode contribuir para o aumento do risco de cancro.</p>
+                <h3>Excesso de Alimentos Ultraprocessados</h3>
+                <p>O consumo excessivo de alimentos ultraprocessados, ricos em açúcares, gorduras e sódio, pode contribuir para o aumento do risco de obesidade, diabetes tipo 2, doenças cardiovasculares e certos tipos de câncer.</p>
             </article>
 
             <article>
-                <h3>frituras</h3>
-                <p>As frituras também podem aumentar o risco de cancro, devido aos compostos tóxicos que podem ser formados durante o processo de fritura.</p>
-            </article> 
-
-            <article>
-                <h3>Reduzir o consumo de alimentos ultraprocessados</h3>
-                
-        
-                <p>Optar por alimentos mais naturais e menos processados, como frutas, legumes, verduras e grãos integrais.</p>
+                <h3>Consumo Excessivo de Açúcar e Gordura</h3>
+                <p>Alimentos com alto teor de açúcar e gorduras saturadas, como refrigerantes e frituras, são prejudiciais à saúde. Eles podem levar ao ganho de peso, inflamação e elevação do colesterol, aumentando o risco de doenças crônicas.</p>
             </article>
 
-            <a href="https://www.youtube.com/watch?v=ILh7nDEKGqc&pp=ygUXSW1wYWN0byBkbyBEZXNtYXRhbWVudG8%3D" class="cta-button" target="_blank">Como impacta o mundo? <i class="fa-solid fa-arrow-up-right-from-square" style="color: var(--text-color);"></i></a>
+            <article>
+                <h3>Dieta Pobre em Nutrientes Essenciais</h3>
+                <p>Uma dieta que não inclui quantidades suficientes de frutas, vegetais, grãos integrais e proteínas magras pode levar à deficiência de vitaminas e minerais essenciais, enfraquecendo o sistema imunológico e comprometendo o bem-estar geral.</p>
+            </article>
+
+            <a href="https://www.who.int/news-room/fact-sheets/detail/healthy-diet" class="cta-button" target="_blank">Saiba mais sobre alimentação saudável <i class="fa-solid fa-arrow-up-right-from-square" style="color: var(--text-color);"></i></a>
         </section>
 
         <section id="consequencias" class="conteudo">
             <h2>Consequências</h2>
             <ul>
-                <li>Aumento das enchentes e erosão do solo</li>
-                <li>Aumento das temperaturas e mudanças climáticas</li>
-                <li>Perda da biodiversidade</li>
-                <li>Redução da qualidade de vida nas cidades</li>
-                <li>Agravamento de problemas de saúde</li>
-                <li>Impacto na economia de comunidades locais</li>
+                <li>Aumento de Doenças Crônicas: Diabetes, doenças cardíacas, hipertensão e alguns tipos de câncer.</li>
+                <li>Obesidade e Sobrepeso: Impactam a qualidade de vida e aumentam o risco de outras complicações de saúde.</li>
+                <li>Impacto Ambiental: Produção de alimentos em larga escala pode levar a esgotamento de recursos naturais e poluição.</li>
+                <li>Desnutrição: Tanto pela falta de alimentos quanto pela má qualidade nutricional da dieta.</li>
+                <li>Custos de Saúde Elevados: O tratamento de doenças relacionadas à má alimentação gera altos gastos.</li>
             </ul>
         </section>
 
-        <section id="conclusao" class="conteudo">
-            <h2>Conclusão</h2>
-            <p>O desmatamento impacta diretamente a vida humana. Para evitar suas consequências, é necessário preservar o meio ambiente, investir em reflorestamento e adotar práticas sustentáveis.</p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/ILh7nDEKGqc?si=feol6sZCHo1Cg-jQ" title="YouTube video.">
+        <section id="solucoes" class="conteudo">
+            <h2>Soluções</h2>
+            <p>Para mitigar os impactos negativos da alimentação, é fundamental adotar hábitos alimentares saudáveis e promover a sustentabilidade na produção de alimentos. Isso inclui:</p>
+            <ul>
+                <li>Priorizar alimentos frescos e minimamente processados.</li>
+                <li>Reduzir o consumo de açúcar, sódio e gorduras saturadas.</li>
+                <li>Apoiar a agricultura familiar e a produção local.</li>
+                <li>Reduzir o desperdício de alimentos.</li>
+                <li>Promover a educação nutricional.</li>
+            </ul>
+            <iframe width="560" height="315" src="https://youtu.be/4yVWI6bIrng?si=TdrnMSxNjMm3loRW" title="ALIMENTOS TRANSGÊNICOS E OS DETALHES QUE ESCONDEM DE VOCÊ"></iframe>
         </section>
-
     </main>
 
     <footer>
